# dt-extensions-python-sdk

./: .buildinfo  .gitignore  LICENSE.txt  README.md  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js  wutch.cfg
.doctrees/: environment.pickle  index.doctree
.doctrees/api/: extension.doctree
.doctrees/api/events/: event_severity.doctree  event_type.doctree  index.doctree
.doctrees/api/metrics/: index.doctree  metric.doctree  metric_type.doctree
.doctrees/cli/: assemble.doctree  build.doctree  create.doctree  gencerts.doctree  help.doctree  run.doctree  sign.doctree  upload.doctree  wheel.doctree
.doctrees/guides/: building.doctree  extension_structure.doctree  installation.doctree  migration.doctree
.github/workflows/: build-package.yml  gh-pages-docs.yml  publish.yml
_modules/: index.html
_modules/dynatrace_extension/sdk/: event.html  extension.html  metric.html
_sources/: index.rst.txt
_sources/api/events/: event_severity.rst.txt  event_type.rst.txt  index.rst.txt
_sources/api/metrics/: index.rst.txt  metric_type.rst.txt
_sources/cli/: build.rst.txt  gencerts.rst.txt  help.rst.txt  run.rst.txt  sign.rst.txt  upload.rst.txt  wheel.rst.txt
_sources/guides/: building.rst.txt  extension_structure.rst.txt  installation.rst.txt  migration.rst.txt
api/: extension.html
api/events/: event_severity.html  event_type.html  index.html
api/metrics/: index.html  metric.html  metric_type.html
cli/: assemble.html  build.html  create.html  gencerts.html  help.html  run.html  sign.html  upload.html  wheel.html
docs/: Makefile  conf.py  index.rst  requirements.txt
docs/api/: event.rst  extension.rst  metric.rst
docs/api/metrics/: metric.rst
docs/cli/: assemble.rst  create.rst
docs/guides/: building.rst  extension_structure.rst  installation.rst  migration.rst
dynatrace_extension/: __about__.py  __init__.py
dynatrace_extension/cli/: __init__.py  main.py  schema.py
dynatrace_extension/cli/activation_config_code_gen/: __init__.py  activation_schema.py  complex_type.py  constraint.py  documented.py  enum.py  generate.py  imports.py  item.py  property.py  ref.py  schema_type.py  utils.py
dynatrace_extension/cli/create/: __init__.py  create.py
dynatrace_extension/cli/create/extension_template/: .gitignore.template  README.md.template  activation.json.template  pyproject.toml.template  ruff.toml.template  secrets.json.template  setup.py.template
dynatrace_extension/cli/create/extension_template/extension/: activationSchema.json.template  extension.yaml.template
dynatrace_extension/cli/create/extension_template/extension_name/: __main__.py.template
dynatrace_extension/cli/hub/: hub_cli.py  hub_client.py
dynatrace_extension/extensions/: __init__.py  callback.py  communication.py  extension.py  helper.py
dynatrace_extension/sdk/: activation.py  callback.py  communication.py  event.py  extension.py  helper.py  metric.py  runtime.py  snapshot.py  status.py  throttled_logger.py
guides/: building.html  extension_structure.html  installation.html  migration.html
tests/: __init__.py
tests/cli/: test_dt_sdk.py  test_templates.py  test_types.py
tests/data/: snapshot.json
tests/extensions/: test_callback.py  test_communication.py  test_extension.py  test_metric.py  test_runtime_properties.py  test_status.py
tests/sdk/: conftest.py  test_activation.py  test_callback.py  test_communication.py  test_endpoints_sfm.py  test_extension.py  test_metric.py  test_runtime_properties.py  test_snapshot.py  test_status.py
